<resources>
    <string name="app_name" translatable="false">Bloom Botanica</string>
    <string name="calendar">Calendar</string>
    <string name="plants">Plants</string>
    <string name="home">Home</string>
    <string name="dashboard">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_username">Hi, </string>
    <string name="enter_your_name">  Enter your name</string>
    <string name="welcome_onboard">Welcome to Bloom Botanica!</string>
    <string name="continue_txt">Continue</string>
    <string name="add_plant">Add a new plant</string>
    <string name="plant_nickname_hint">Enter your plant\'s nickname</string>
    <string name="add">Add</string>
    <string name="delete_plant">Delete Plant</string>
    <string name="edit_user_plant">Edit plant</string>
    <string name="delete_user_plant">Delete plant</string>
    <string name="plant_scientific_name_hint">What kind of plant is it?</string>
    <string name="add_plant_title">Add plant</string>
    <string name="mark_as_done">Mark as Done</string>
    <string name="task_count">Pending Tasks: %1$d</string>
    <string name="task_icon">Icon for the task type</string>
    <string name="mark_done">Mark task as done</string>
    <string name="empty_task_calendar">Nothing to see here!</string>
    <string name="weather_date_placeholder">Loading...</string>
    <string name="temperature_placeholder">--°C</string>
    <string name="humidity_placeholder">--%</string>
    <string name="sunlight_placeholder">--%</string>
    <string name="settings">Settings</string>
    <string name="take_picture">Take Picture</string>
    <string name="placeholder">" "</string>
    <string name="camera">Camera</string>
    <string name="mark_as_watered">Mark as watered</string>
    <string name="last_watered_today">Last watered today</string>
    <string name="last_watered_yesterday">Last watered yesterday</string>
    <string name="last_watered">Last watered %1$d days ago</string>
    <string name="never_watered">Plant added, water it!</string>
    <string name="add_image">Add Image</string>
    <string name="logo_desc">BloomBotanica Logo</string>
    <string name="plant_name">Plant Name</string>
    <string name="CardImage">Card Image</string>
    <string name="plantSearch">Search Plants</string>
    <string name="add_question">Would you like to add this plant?</string>
    <string name="captured_image">Captured Image</string>
    <string name="care_instructions">Care Instructions</string>
    <string name="model_confidence">Model Confidence</string>
    <string name="AboutTitle">About us!</string>
    <string name="AboutBlurb">\n\nWe are Bloom Botanica! An entirely student coded and student run app designed to help manage all your plant care needs! \n\n Navigate the app using the toolbar at the bottom of the screen. Just tap each icon to be taken to the respective page. \n The Dashboard is your home page. This is where you will see your pending or overdue tasks. \n\n The Calendar tab is designed to help visualize and easily see all your upcoming and pending tasks for the current month, or you can use the arrows to check on future months! \n\n The Camera tab is a handy tool that can help you identify plants in real-time so there’s never any doubt. \n\n The Plants tab is where you manually add your plant companions: you will be given the opportunity to nickname your plant and add the plant type. Once your plant is added, you can take a picture of the plant by tapping on the generate plant picture. To water or prune your plant, just tap on the respective icons. Finally, you can tap the button on the bottom of the page to record a journal of your plant journey. \n\n The Settings tab is where you can customize your app, such as changing the theme or learning the version history. \n\n Enjoy Bloom Botanica! Happy planting :)</string>
    <string name="back_button">Back Button</string>
    <string name="last_turned">Last rotated %1$d days ago</string>
    <string name="last_turned_yesterday">Last rotated yesterday</string>
    <string name="last_turned_today">Last rotated today</string>
    <string name="plant_added_turn_it">Plant added, rotate it!</string>
    <string name="due_1_d_days_ago">Due %1$d days ago!</string>
    <string name="open_journal">Open Journal</string>
    <string name="humidity">Humidity</string>
    <string name="date">Date</string>
    <string name="dots">...</string>
    <string name="temperature">Temperature</string>
    <string name="light">Light</string>
    <string name="please_pick_your_preferred_language">Please pick your preferred language:</string>
    <string name="click_here_to_add_plant">Click here to add plant</string>
    <string name="sunlight_loading">Sunlight: Loading.....</string>
    <string name="soil_type_loading">Soil Type: Loading.....</string>
    <string name="watering_loading">Watering: Loading.....</string>
    <string name="tips_to_care_for_your_plant">Tips to care for your plant</string>
    <string name="general">General</string>
    <string name="account_information">Account Information</string>
    <string name="appearance">Appearance</string>
    <string name="notifications">Notifications</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="version">Version Name: 1.0.0\nVersion Code: 1\n\nAuthors\nJP Marques, Ethan D\'Mello,\nEvan Ellig, Zorah Jawadi,\n Arhan Ikram</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="change_account_information">Change Account Information</string>
    <string name="enter_your_new_name">Enter your new name</string>
    <string name="save">Save</string>
    <string name="name">Name:</string>
    <string name="we_think_it_is">We think it is...</string>
    <string name="task_count_home">Task Count</string>
    <string name="you_have_no_tasks_today">You have no tasks today!</string>
    <string name="my_plants">My Plants</string>
    <string name="about">About</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>German</item>
        <item>Italian</item>
    </string-array>


</resources>